--- a/style.css
+++ b/style.css
@@ -31,14 +31,21 @@ a {
     padding: 48px;
 }
 
-.placeholder {
+.left {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+ .placeholder {
     display: flex;
     background-color: gray;
     color: white;
     align-items: center;
     text-align: center;
-    flex: 1 1 0px;
-}
+} 
+
 
 .header {
     display: flex;
@@ -47,13 +54,31 @@ a {
     gap: 8px;
 }   
 
-h1 {
-    font-size: 48px;
-}
-
 .logo {
     display: flex;
     margin-right: auto;
     font-size: 24px;
     color: #F9FAf8;
 }
+
+h1 { 
+    font-size: 48px;
+    margin: 0;
+}
+h2 {
+    font-size: 18px;
+} 
+/* i know theres a way to combine that ok */
+/*
+.second {
+    color: #1F2937;
+    font-size: 20px;
+}
+
+.boxes {
+    border: 40px;
+    display: flex; 
+    align-items: center;
+    justify-content: space-evenly;
+}
+*/
