--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ h2 {
     display: flex;
     justify-content: center;
     gap: 20px;
+    margin-bottom: 68px;
 }
 
 .boxes {
@@ -93,12 +94,19 @@ h2 {
     align-items: center;
     height: 130px;
     width: 130px;
-    border: 6px;
+    border: 4px;
     border-radius: 8px;
     border-color: #3882F6;
     border-style: solid;
-    margin-bottom: 68px;
 }
+
+ .card {
+    display: inline-block;
+    flex-wrap: wrap;
+    text-align: center;
+    max-width: 144px;
+}  
+
 
 /* third section */
 
