--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ h2 {
 .information {
     display: flex;
     justify-content: center;
-    gap: 20px;
+    gap: 30px;
     margin-bottom: 68px;
 }
 
@@ -98,6 +98,7 @@ h2 {
     border-radius: 8px;
     border-color: #3882F6;
     border-style: solid;
+    margin-bottom: 6px;
 }
 
  .card {
@@ -107,16 +108,19 @@ h2 {
     max-width: 144px;
 }  
 
-
 /* third section */
 
 .third {
     background-color: #E5E7EB;
     font-size: 36px;
     font-style: italic;
+    padding: 150px;
+
 }
 
 .attribution {
     display: flex;
     justify-content: flex-end;
+    font-weight: bold;
+    font-style: normal;
 }
