--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 .first {
     display: flex;
     flex-direction: column;
-    background-color: #1F2937;
+    background-color: hsl(215, 28%, 17%);
     color: #E5E7EB;
 }
 
@@ -124,7 +124,6 @@ h2 {
     font-style: italic;
     font-weight: 200; /* light italic */
     padding: 160px;
-
 }
 
 .attribution {
@@ -143,11 +142,13 @@ h2 {
 
 .action {
     display: flex;
+    justify-content: center;
     background-color: #3882F6;
-    width: 640px;
+    width: 1000px;
     height: 130px;
     border-radius: 5px;
-    align-items: center;    
+    align-items: center;
+    margin: 68px;   
 }
 
 .button-two {
@@ -157,12 +158,17 @@ h2 {
     border-style: solid;
 }
 
-.action-text {
+.action-content {
     display: flex;
-    justify-content: space-between;
     align-items: center;
     color: #E5E7EB;
+    gap: 200px;
 }
 
 .action-left {
+    display: inline;
+}
+
+h3 {
+    margin: 0px;
 }
