--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 body {
     font-family: 'Roboto', sans-serif;
@@ -32,17 +32,20 @@ a {
     height: 30px;
     border-radius: 5px;
     color: #E5E7EB;
+    font-weight: bold;
 }
 
 .button-one {
     background-color: #3882F6;
     margin-top: 10px;
+    border-style: none;
 }
 
 .hero {
     display: flex;
     gap: 40px;
     margin: 120px 200px;
+
 }
 
 .hero-left {
@@ -79,6 +82,7 @@ h1 {
     font-weight: bolder;
     margin: 0;
 }
+
 h2 {
     font-size: 18px;
     font-weight: lighter;
@@ -112,7 +116,7 @@ h2 {
     margin-bottom: 6px;
 }
 
- .box-wrapper {
+.box-wrapper {
     text-align: center;
     max-width: 148px;
 }  
@@ -120,11 +124,13 @@ h2 {
 /* third section */
 
 .third {
+    display: flex;
+    align-items: center;
     background-color: #E5E7EB;
     font-size: 36px;
     font-style: italic;
-    /* font-weight: light italic */
-    padding: 160px 400px;
+    font-weight: 300;
+    height: 480px;
 }
 
 .attribution {
@@ -132,6 +138,15 @@ h2 {
     justify-content: flex-end;
     font-weight: bolder;
     font-style: normal;
+}
+
+.quote-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-end;
+
+
 }
 
 /* fourth section */
@@ -144,11 +159,11 @@ h2 {
 .action {
     display: flex;
     justify-content: center;
+    align-items: center;
     background-color: #3882F6;
     width: 1000px;
     height: 130px;
     border-radius: 5px;
-    align-items: center;
     margin: 68px;   
 }
 
