--- a/style.css
+++ b/style.css
@@ -90,6 +90,10 @@ h2 {
 
 /* second section */ 
 
+.second {
+    display: inline;
+}
+
 .second-header {
     display: flex;
     justify-content: center;
@@ -144,9 +148,6 @@ h2 {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-end;
-
-
 }
 
 /* fourth section */
@@ -161,10 +162,10 @@ h2 {
     justify-content: center;
     align-items: center;
     background-color: #3882F6;
-    width: 1000px;
-    height: 130px;
+    width: 28cm;
+    height: 3.2cm;
     border-radius: 5px;
-    margin: 68px;   
+    margin: 68px 200px;
 }
 
 .button-two {
