--- a/style.css
+++ b/style.css
@@ -90,17 +90,12 @@ h2 {
 
 /* second section */ 
 
-.second {
-    display: inline;
-}
-
 .second-header {
-    display: flex;
-    justify-content: center;
     padding: 22px;
     color: #1F2937;
     font-size: 36px;
     font-weight: 800;
+    text-align: center;
 }
 
 .information {
@@ -111,8 +106,8 @@ h2 {
 }
 
 .boxes {
-    height: 130px;
-    width: 130px;
+    height: 140px;
+    width: 140px;
     border: 4px;
     border-radius: 8px;
     border-color: #3882F6;
@@ -130,6 +125,7 @@ h2 {
 .third {
     display: flex;
     align-items: center;
+    justify-content: center;
     background-color: #E5E7EB;
     font-size: 36px;
     font-style: italic;
@@ -147,7 +143,7 @@ h2 {
 .quote-text {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    max-width: 748px;
 }
 
 /* fourth section */
@@ -162,8 +158,6 @@ h2 {
     justify-content: center;
     align-items: center;
     background-color: #3882F6;
-    width: 28cm;
-    height: 3.2cm;
     border-radius: 5px;
     margin: 68px 200px;
 }
