--- a/style.css
+++ b/style.css
@@ -165,6 +165,7 @@ h2 {
     background-color: #3882F6;
     border-radius: 5px;
     width: 100%;
+    padding: 40px;
 }
 
 .button-two {
@@ -189,7 +190,6 @@ h2 {
 /* fifth section */
 
 .fifth {
-    height: 75px;
     align-items: center;
     justify-content: center;
     margin-top: auto;
