--- a/style.css
+++ b/style.css
@@ -9,11 +9,8 @@ body {
     flex-direction: column;
 }
 
-.first {
-    flex-direction: column;
-    padding: 0px 200px;
-    justify-content: center;
-    height: 40%;
+.first, .second, .third, .fourth, .fifth {
+    padding: 0px 200px; 
 }
 
 .first, .fifth {
@@ -22,8 +19,23 @@ body {
     color: #E5E7EB;
 }
 
-.logo {
+.hero-button, .action-button {
+    width: 120px;
+    height: 30px;
+    border-radius: 5px;
+    color: #E5E7EB;
     font-weight: bold;
+}
+
+.first {
+    display: flex;
+    flex-direction: column;
+}
+
+.header-logo {
+    font-size: 24px;
+    font-weight: 500;
+    color: #F9FAF8;
 }
 
 a {
@@ -32,67 +44,44 @@ a {
     color: #E5E7EB;
 }
 
-.button-one, .button-two {
-    width: 120px;
-    height: 30px;
-    border-radius: 5px;
-    color: #E5E7EB;
-    font-weight: bold;
+.placeholder {
+    flex: 1;
+    background-color: #616161;
+    align-items: center;
+    text-align: center;
 }
 
-.button-one {
+.hero-button {
     background-color: #3882F6;
-    margin-top: 10px;
     border-style: none;
+    margin-top: 8px;
 }
 
-.hero {
+.links {
     display: flex;
-    gap: 40px;
+    align-items: center;
+    gap: 12px;
 }
 
 .hero-left {
-    display: flex;
     flex: 1;
-    flex-direction: column;
-    align-items: flex-start;
 }
 
- .placeholder {
+.hero-main-text {
+    font-size: 48px;    
+    font-weight: 700;
+    color: #F9FAF8;
+}
+
+.hero-wrapper {
     display: flex;
-    background-color: gray;
-    color: white;
-    align-items: center;
-    justify-content: center;
-    flex: 1;
+    gap: 50px;
 }
 
 .header {
     display: flex;
     justify-content: space-between;
-    align-items: flex-start;
-    font-size: 24px;
-    margin-top: 16px;
-}   
-
-.links {
-    display: flex;
-    gap: 18px;
-}
-
-.hero-header { 
-    font-size: 48px;
-    font-weight: bolder;
-    margin: 0;
-}
-
-h2 {
-    font-size: 18px;
-    font-weight: lighter;
-} 
-
-.header-container {
-
+    margin-top: 10px;
 }
 
 /* second section */ 
@@ -150,7 +139,7 @@ h2 {
 .quote-text {
     display: flex;
     flex-direction: column;
-    max-width: 748px;
+    max-width: 100%;
 }
 
 /* fourth section */
@@ -158,7 +147,6 @@ h2 {
 .fourth {
     display: flex;
     margin: 68px 0px;
-    padding: 0px 200px;
 }
 
 .action {
@@ -168,7 +156,7 @@ h2 {
     padding: 40px;
 }
 
-.button-two {
+.action-button {
     border: 2px;
     border-color: #E5E7EB;
     background-color: #3882F6;
