--- a/style.css
+++ b/style.css
@@ -5,8 +5,6 @@ body {
     margin: 0;
     height: 100vw;
     width: 100%;
-    display: flex;
-    flex-direction: column;
 }
 
 .first, .second, .third, .fourth, .fifth {
@@ -28,7 +26,6 @@ body {
 }
 
 .first {
-    display: flex;
     flex-direction: column;
 }
 
@@ -42,13 +39,15 @@ a {
     text-decoration: none;
     font-size: 18px;
     color: #E5E7EB;
+    font-weight: 300;
 }
 
 .placeholder {
-    flex: 1;
-    background-color: #616161;
+    display: flex;
+    justify-content: center;
     align-items: center;
-    text-align: center;
+    background-color: #616161;
+    flex: 50%;
 }
 
 .hero-button {
@@ -59,12 +58,11 @@ a {
 
 .links {
     display: flex;
-    align-items: center;
     gap: 12px;
 }
 
 .hero-left {
-    flex: 1;
+    flex: 50%;
 }
 
 .hero-main-text {
@@ -76,12 +74,14 @@ a {
 .hero-wrapper {
     display: flex;
     gap: 50px;
+    padding: 80px 0px;
 }
 
 .header {
     display: flex;
     justify-content: space-between;
     margin-top: 10px;
+    align-items: center;
 }
 
 /* second section */ 
